fix alignment of vtx tab icon
icon alignment is too high, should be centered

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -881,7 +881,6 @@ li.active .ic_transponder {
 
 .ic_vtx {
     background-image: url(../images/icons/cf_icon_vtx_grey.svg);
-    background-position-y: 4px;
 }
 
 .ic_vtx:hover, li.active .ic_osd {
